# marktstammdaten-api

./: CNAME  README.md  generator_config.yaml  index.html  openapi.yaml
python-client/: README.md  pyproject.toml  tox.ini
python-client/.openapi-generator/: FILES
python-client/deutschland/marktstammdaten/: __init__.py  api_client.py  configuration.py  exceptions.py  model_utils.py  rest.py
python-client/deutschland/marktstammdaten/api/: __init__.py  daten_api.py  filter_api.py
python-client/deutschland/marktstammdaten/apis/: __init__.py
python-client/deutschland/marktstammdaten/model/: __init__.py  einheit_einheit_json_get_erweiterte_oeffentliche_einheit_stromerzeugung_get200_response.py  entry.py  filter.py  filter_list_object_inner.py
python-client/deutschland/marktstammdaten/models/: __init__.py
python-client/docs/: DatenApi.md  EinheitEinheitJsonGetErweiterteOeffentlicheEinheitStromerzeugungGet200Response.md  Entry.md  Filter.md  FilterApi.md  FilterListObjectInner.md
python-client/sphinx-docs/: conf.py  index.rst
python-client/sphinx-docs/source/: marktstammdaten.api.rst  marktstammdaten.apis.rst  marktstammdaten.model.rst  marktstammdaten.models.rst  marktstammdaten.rst  modules.rst
python-client/test/: test_daten_api.py  test_einheit_einheit_json_get_erweiterte_oeffentliche_einheit_stromerzeugung_get200_response.py  test_entry.py  test_filter.py  test_filter_api.py  test_filter_list_object_inner.py
